# fin-comp

./: README.md
hw1/: Package.swift  README.md
hw1/Sources/: BinomialTree.swift  main.swift
hw2/: README.md  index.js  package.json  tree.js  treenode.js
hw3/: .gitignore  CMakeLists.txt  README.md  arguments.c  arguments.h  main.c  utilities.c  utilities.h
hw4/: .gitignore  README.md  run.py
hw4/rt/: GRACH.py  pricing.py  tree.py
